# JanuseL4

./: CMakeLists.txt  fix_shiba_platform.sh  quick_debug.sh
include/arch/arm/arch/machine/: gic_common.h
include/plat/shiba/plat/: machine.h
include/plat/tensor-g3/plat/: gic.h  machine.h  serial.h
include/plat/tensor-g3/plat/machine/: hardware.h  interrupt.h
libsel4/sel4_plat_include/tensor-g3/sel4/plat/api/: constants.h
src/arch/arm/: platform_gen.h.in
src/plat/shiba/: CMakeLists.txt  Kconfig  config.cmake  overlay-shiba.dts  pixel8.dts
src/plat/shiba/include/plat/: gic.h  platform_gen.h.  serial.h
src/plat/shiba/machine/: hardware.c
src/plat/shiba/src/: cache.c  gic.c  hardware.c  plat_entry.S  serial.c  smp.c
src/plat/tensor-g3/: config.cmake
src/plat/tensor-g3/include/plat/: platform_gen.h
src/plat/tensor-g3/include/plat/machine/: interrupt.h
tools/dts/: exynos5250.dts
